@@ -1,3 +1,9 @@
+2001-10-19  Mark McLoughlin  <mark@skynet.ie>
+
+	* panel_config.c: (update_config_back), (value_changed),
+	(background_page): gnome_pixmap_entry_gtk_entry to
+	gnome_file_entry_gtk_entry.
+
 2001-10-19  Glynn Foster <glynn.foster@sun.com>
 
 	* menu.c: added casts to GTK_MENU to remove some compile
